# CARS-R-v0.1.0

./: LICENSE  README.md  pyproject.toml
cars/: __init__.py  experiment.py  model.py
docs/: ARCHITECTURE_FREEZE_0_1_0.md  EVALUATION_AUDIT_0_1_0.md  MATHEMATICAL_RESEARCH_NOTEBOOK.md  NEXT_SCALE_EXPERIMENT.md  PILOT_RESULTS_0_1_0.md
tests/: test_research.py
