[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cars-r-research"
version = "0.1.0"
description = "CARS-R 0.1.0 research implementation with causal byte patches, CPLA, recurrence, and Thompson experiment allocation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.3,<3"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
cars-r = "cars.experiment:main"

[tool.setuptools]
packages = ["cars"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
